overflow auto on .mediablock for IE7 layout fix

--- a/template/templates/wut/sass/mediablock.scss
+++ b/template/templates/wut/sass/mediablock.scss
@@ -1,5 +1,6 @@
 .mediablock {
 	margin: 1em 0 0;
+	overflow: auto;
 	
 	.media {
 		float: left;
